... ugh, one last formatting issue

--- a/requests.ipynb
+++ b/requests.ipynb
@@ -81,7 +81,7 @@
     "    ).strftime('%Y-%m-%d')\n",
     "\n",
     "data = [\n",
-    "    [parseDate(point[0]), point[1], country['name']] # get data point[0] and point[1] and the country name...\n",
+    "    [parseDate(point[0]), point[1], country['name']] # get data points and country name...\n",
     "    for country in json['dataBox2']['countryData'] # ... for every country in the results...\n",
     "    for point in country['data'] # ... and for every point in the country data.\n",
     "]"
